# ipynb_to_py

./: .gitignore  LICENSE  README.md  ipynbtopy.py  main.py  pyproject.toml  test_main.py
src/ipynb_to_py/: __init__.py
