[project]
name = "ipynb-to-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "geoqiao", email = "realvincentqiao@gmail.com" }
]
dependencies = [
    "nbformat>=5.9.2",
    "ipykernel>=6.26.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
